projects/vb6parse/snapshots/syntax/library/statements/width/width_preserves_formatting.snap
---
source: projects/vb6parse/src/syntax/library/statements/file_operations/width.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: WidthStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: WidthKeyword
                  text: Width
                - kind: Whitespace
                  text: "    "
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Whitespace
                  text: "   "
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: "    "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "80"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
